[package]
name = "candev"
categories = ["os::unix-apis"]
version = "0.1.0"
authors = ["René Herrero>"]
edition = "2018"

[dependencies]
libc = "0.2.74"
embedded-hal = { git = "https://github.com/timokroeger/embedded-hal", branch = "can-take-4" }
nb = "1.0.0"

[features]
vcan0 = []

[[example]]
name = "driver"

[[example]]
name = "receive"

[[example]]
name = "transmit"