[package]
name = "candev"
categories = ["os::unix-apis"]
version = "0.1.0"
authors = ["René Herrero>"]
edition = "2021"

[dependencies]
libc = "0.2.74"
embedded-hal = { git = "https://github.com/rust-embedded/embedded-hal.git", branch = "master" }
nb = "1.0.0"

[features]
vcan0 = []

[[example]]
name = "driver"

[[example]]
name = "receive"

[[example]]
name = "transmit"
