[package]
name = "candev"
categories = ["os::unix-apis"]
version = "0.1.0"
authors = ["René Herrero>"]
edition = "2021"

[dependencies]
libc = "0.2.74"
embedded-can = { version = "0.4.1" }

[features]
vcan0 = []

[[example]]
name = "driver"

[[example]]
name = "receive"

[[example]]
name = "transmit"
